syntax = "proto3";
package alice.checkers.v1;

option go_package = "github.com/alice/checkers";

import "alice/checkers/v1/types.proto";
import "google/api/annotations.proto";
import "cosmos/query/v1/query.proto";
import "gogoproto/gogo.proto";

// Query defines the module Query service.
service Query {
  // GetGame returns the game at the requested index.
  rpc GetGame(QueryGetGameRequest) returns (QueryGetGameResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get =
      "/alice/checkers/v1/game/{index}";
  }
}

// QueryGetGameRequest is the request type for the Query/GetGame RPC
// method.
message QueryGetGameRequest {
  // index defines the index of the game to retrieve.
  string index = 1;
}

// QueryGetGameResponse is the response type for the Query/GetGame RPC
// method.
message QueryGetGameResponse {
  // Game defines the game at the requested index.
  StoredGame Game = 1;
}